--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,3 +10,5 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(app LANGUAGES C)
 
 target_sources(app PRIVATE src/main.c)
+
+add_subdirectory(src/bt)
