--- a/boards/gugu/biomed/biomed.dts
+++ b/boards/gugu/biomed/biomed.dts
@@ -88,3 +88,16 @@
 		zephyr,resolution = <12>;
 	};
 };
+
+&i2c0 {
+	status = "okay";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	pinctrl-0 = <&i2c0_default>;
+	pinctrl-names = "default";
+
+	max30101@57 {
+		compatible = "maxim,max30101";
+		status = "okay";
+		reg = <0x57>;
+	};
+};
