--- a/boards/gugu/biomed/biomed_defconfig
+++ b/boards/gugu/biomed/biomed_defconfig
@@ -8,3 +8,8 @@ CONFIG_SERIAL=y
 CONFIG_UART_CONSOLE=y
 
 CONFIG_GPIO=y
+
+CONFIG_I2C=y
+CONFIG_SENSOR=y
+CONFIG_MAX30101=y
+CONFIG_MAX30101_HEART_RATE_MODE=y
