--- a/app/prj.conf
+++ b/app/prj.conf
@@ -2,7 +2,6 @@
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 CONFIG_BT=y
-CONFIG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
 CONFIG_BT_PERIPHERAL=y
@@ -18,5 +17,8 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 CONFIG_SETTINGS=y
+
+CONFIG_LOG=y
+CONFIG_APP_LOG_LEVEL_DBG=y
 
 CONFIG_ADC=y
