--- a/boards/gugu/biomed/biomed-pinctrl.dtsi
+++ b/boards/gugu/biomed/biomed-pinctrl.dtsi
@@ -16,10 +16,10 @@
 
 	i2c0_default: i2c0_default {
 		group1 {
-			pinmux = <I2C0_SDA_GPIO5>;
-		};
-		group2 {
-			pinmux = <I2C0_SCL_GPIO6>;
+			pinmux = <I2C0_SDA_GPIO5>,
+					 <I2C0_SCL_GPIO6>;
+			drive-open-drain;
+			output-high;
 		};
 	};
 };
